Select header style fix

--- a/styles/_select.scss
+++ b/styles/_select.scss
@@ -19,7 +19,7 @@
   .select-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   .icon-container {
