--- a/styles/_spinner.scss
+++ b/styles/_spinner.scss
@@ -31,6 +31,9 @@
      opacity: 1;
    }
 
+   // Colors
+   &.-transparent { background: rgba(white,0); }
+
    .spinner-box {
      position: absolute;
      top: 50%;
