--- a/styles/_segmentedui.scss
+++ b/styles/_segmentedui.scss
@@ -5,7 +5,7 @@
   // Component themes
   // Tabs theme
   &.-tabs {
-    background-color: palette(blue, dark);
+    background-color: palette(blue, 'dark');
 
     .segmented-ui-item {
       &.-active {
