--- a/styles/_filters.scss
+++ b/styles/_filters.scss
@@ -48,9 +48,9 @@
   }
 
   > * {
-    margin: 0 0 $space-1 * 3;
+    margin-bottom: $space-1 * 3;
 
-    &:last-child { margin: 0; }
+    &:last-child { margin-bottom: 0; }
   }
 
   &:empty { display: none; }
