--- a/styles/_map-controls.scss
+++ b/styles/_map-controls.scss
@@ -1,4 +1,4 @@
-$button-size: 48px;
+$button-size: 36px;
 
 .c-map-controls {
   position: absolute;
@@ -6,50 +6,48 @@ $button-size: 48px;
   right: $space-1 * 2;
   z-index: 999;
 
-  > .map-actions-list {
-    margin: $space-1 / 2 0 0 0;
-  }
-
-  > .map-actions-list > .map-actions-item {
+  .map-controls-item {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: palette(white);
 
     width: 100%;
-    height: $button-size;
     padding: 0;
 
-    border: 1px solid palette(gray, light);
+    border: 1px solid palette(gray, 'light');
     border-radius: 3px;
-
-    color: palette(gray, dark);
-    font-size: 18px;
-    line-height: $button-size;
-    text-align: center;
-
-    background-color: palette(white);
-    transition: background-color linear $animation-time;
 
     &:not(:first-child) {
       margin: $space-1 / 2 0 0 0;
     }
 
     // buttons
-    .download-map-btn {
+    button {
       position: relative;
-      width: 100%;
-      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: $button-size;
+      height: $button-size;
+      background-color: palette(white);
+      transition: background-color linear $animation-time;
 
-      > button {
-        width: 100%;
-        height: 100%;
+      &:not(:first-child) {
+        border-top: 1px solid palette(gray, 'light');
       }
 
-      > button > svg {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+      &:hover {
+        background-color: darken(palette(white), 5%);
+      }
+
+      &.-disabled {
+        pointer-events: none;
+        opacity: 0.25;
+      }
+
+      > svg {
+        fill: palette(gray, 'dark');
       }
     }
   }
