--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -62,6 +62,7 @@ $font-size-default: 14px;
 $font-size-big:     16px;
 $font-size-extrabig: 18px;
 $font-size-huge:  22px;
+$font-size-extrahuge:  32px;
 
 // Grays
 $gray-3: #333;
