--- a/styles/_map.scss
+++ b/styles/_map.scss
@@ -23,9 +23,9 @@
     }
     a {
       @include only-mobile {
-        width: 48px;
-        height: 48px;
-        line-height: 48px;
+        width: 36px;
+        height: 36px;
+        line-height: 36px;
         box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.26);
         font-size: 24px;
         &:last-child {
@@ -126,8 +126,8 @@
 
 .toggle-legend-btn {
   display: block;
-  width: 48px;
-  height: 48px;
+  width: 36px;
+  height: 36px;
   background-color: palette(white);
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.26);
   position: absolute;
@@ -139,8 +139,8 @@
   justify-content: center;
 
   svg {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     fill: #4a596a;
   }
 }
