--- a/styles/_legend.scss
+++ b/styles/_legend.scss
@@ -100,6 +100,9 @@
     padding: 18px 14px;
   }
 
+  @include only-print {
+    padding: 18px 14px;
+  }
 
   &:last-child {
     border-bottom: none;
@@ -201,6 +204,10 @@
           margin: 0 0 0 10px;
         }
 
+        @include only-print {
+          display: flex;
+        }
+
         .graph-list-item {
           @include only-mobile {
             display: flex;
@@ -225,6 +232,13 @@
               border-bottom: 1px solid $border-color-2;
               height: 7px;
             }
+
+            @include only-print {
+              border-top: 1px solid $border-color-2;
+              border-bottom: 1px solid $border-color-2;
+              height: 7px;
+            }
+
           }
 
           .label {
@@ -238,6 +252,10 @@
             @include only-desktop {
               margin: 5px 5px 0 0;
             }
+
+            @include only-print {
+              margin: 5px 5px 0 0;
+            }
           }
 
           .value {
@@ -248,6 +266,10 @@
             font-weight: 400;
 
             @include only-desktop {
+              margin: 3px 5px 0 0;
+            }
+
+            @include only-print {
               margin: 3px 5px 0 0;
             }
           }
@@ -337,6 +359,13 @@
             }
           }
 
+          @include only-print {
+            width: calc(25% - #{$space-1});
+            &:last-child {
+              margin: 0;
+            }
+          }
+
           .color {
             display: block;
             width: 12px;
@@ -389,6 +418,13 @@
           }
 
           @include only-desktop {
+            width: calc(25% - #{$space-1});
+            &:last-child {
+              margin-right: 0;
+            }
+          }
+
+          @include only-print {
             width: calc(25% - #{$space-1});
             &:last-child {
               margin-right: 0;
