--- a/styles/_segmentedui.scss
+++ b/styles/_segmentedui.scss
@@ -32,6 +32,34 @@
     }
   }
 
+  &.-tabs-light {
+    background-color: palette(gray, 'lightest');
+
+    .segmented-ui-item {
+      &.-active {
+        .segmented-ui-btn {
+          pointer-events: none;
+          background: palette(white);
+          color: palette(gray, 'dark');
+        }
+      }
+    }
+
+    .segmented-ui-btn {
+      padding: #{($space-1 * 4)/2} #{$space-1 * 4};
+      text-transform: uppercase;
+      color: palette(gray, 'dark');
+      font-size: $font-size-default;
+      font-weight: 500;
+      letter-spacing: 1.2px;
+      transition: all linear $animation-time;
+
+      &:hover {
+        color: palette(black);
+      }
+    }
+  }
+
   // Stacked theme
   &.-stacked-tabs {
     .segmented-ui-item {
