Zoom: Minor fixes

--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -100,7 +100,12 @@
     }
   }
 
-  // SIZES
+  &.-auto {
+    .modal-content {
+      overflow: visible;
+    }
+  }
+
   &.-full {
     .modal-container {
       max-width: none;
