--- a/styles/_map-header.scss
+++ b/styles/_map-header.scss
@@ -8,6 +8,7 @@
   background-color: rgba(245, 243, 240, .9);
   box-shadow: 0 0 2px rgba(palette(black), .25);
   text-align: center;
+  text-transform: capitalize;
 
   > .title {
     font-family: $font-family-roboto;
