--- a/styles/_legend.scss
+++ b/styles/_legend.scss
@@ -402,6 +402,7 @@
           justify-content: flex-start;
           align-items: center;
           cursor: pointer;
+          text-transform: capitalize;
 
           > .color {
             display: block;
