--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -38,7 +38,7 @@
   .modal-content {
     position: relative;
     width: 100%;
-    max-height: 85vh; // Be careful with iOS devices
+    max-height: calc(100vh - 120px); // Be careful with iOS devices
     min-height: 150px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
