--- a/styles/_icon.scss
+++ b/styles/_icon.scss
@@ -1,25 +1,25 @@
-.c-icon {
-  width: 20px;
-  height: 20px;
-  flex-shrink: 0;
+// .c-icon {
+//   width: 20px;
+//   height: 20px;
+//   flex-shrink: 0;
 
-  &.-small {
-    width: 10px;
-    height: 10px;
-  }
+//   &.-small {
+//     width: 10px;
+//     height: 10px;
+//   }
 
-  &.-medium {
-    width: 24px;
-    height: 24px;
-  }
+//   &.-medium {
+//     width: 24px;
+//     height: 24px;
+//   }
 
-  &.-big {
-    width: 32px;
-    height: 32px;
-  }
+//   &.-big {
+//     width: 32px;
+//     height: 32px;
+//   }
 
-  &.-huge {
-    width: 65px;
-    height: 65px;
-  }
-}
+//   &.-huge {
+//     width: 65px;
+//     height: 65px;
+//   }
+// }
