--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -110,3 +110,20 @@ $height-filter-btn: 52px;
 
 // Layout
 $sidebar-padding: $space-1 * 4;
+
+@-webkit-keyframes rotate {
+  from { transform: rotate(0deg);}
+  to { transform: rotate(360deg);}
+}
+@-moz-keyframes rotate {
+  from { transform: rotate(0deg);}
+  to { transform: rotate(360deg);}
+}
+@-ms-keyframes rotate {
+  from { transform: rotate(0deg);}
+  to { transform: rotate(360deg);}
+}
+@keyframes rotate {
+  from { transform: rotate(0deg);}
+  to { transform: rotate(360deg);}
+}
