--- a/src/components/map/map-controls/styles.scss
+++ b/src/components/map/map-controls/styles.scss
@@ -1,34 +1,32 @@
+@import 'styles/settings';
+
 $button-size: 36px;
 
 .c-map-controls {
   position: absolute;
-  top: $space-1 * 2;
-  right: $space-1 * 2;
   z-index: 999;
 
-  &.-left {
-    top: $space-1 * 2;
-    left: $space-1 * 2;
-    right: auto;
+  > * {
+    &:not(:first-child) {
+      margin: $space-1 0 0;
+    }
   }
 
-  .map-controls-item {
+  li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: palette(white);
-
     width: 100%;
     padding: 0;
-
+    margin: 0;
     border: 1px solid palette(gray, 'light');
     border-radius: 3px;
+    background-color: palette(white);
 
     &:not(:first-child) {
       margin: $space-1 / 2 0 0 0;
     }
 
-    // buttons
     button {
       position: relative;
       display: flex;
@@ -36,8 +34,13 @@ $button-size: 36px;
       align-items: center;
       width: $button-size;
       height: $button-size;
+      padding: 0;
+      margin: 0;
+      border: 0;
+      border-radius: 3px;
       background-color: palette(white);
       transition: background-color linear $animation-time;
+      cursor: pointer;
 
       &:not(:first-child) {
         border-top: 1px solid palette(gray, 'light');
@@ -49,7 +52,7 @@ $button-size: 36px;
 
       &.-disabled {
         pointer-events: none;
-        opacity: 0.25;
+        opacity: .25;
       }
 
       > svg {
