--- a/src/components/form/checkbox/styles.scss
+++ b/src/components/form/checkbox/styles.scss
@@ -1,29 +1,28 @@
 @import 'styles/settings';
+@import 'styles/functions';
 
 .c-checkbox {
-  label {
-    font-size: $font-size-big;
-    font-weight: 500;
-    display: block;
-    padding: 2px 0;
-    text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  font-family: $font-family-1;
+  font-size: $font-size-default;
+
+  > label {
     position: relative;
-    padding-left: 22px;
-    line-height: 1;
-    cursor: pointer;
-    width: auto;
     top: 0;
     left: 0;
+    display: block;
+    padding: 2px 0 0 22px;
+    width: auto;
     transform: none;
+    font-size: $font-size-big;
+    font-weight: 500;
+    text-transform: none;
+    line-height: 1;
     text-align: left;
-    color: palette(blue, light);
     transition: color linear .1s;
+    cursor: pointer;
 
-    &:hover {
-      color: palette(blue, lighter);
-    }
-
-    span {
+    .checkbox-label-fake {
       position: absolute;
       top: 50%;
       left: 0;
@@ -31,17 +30,17 @@
       height: 16px;
       border: 1px solid palette(blue, light);
       border-radius: 2px;
-      transform: translate(0,-50%);
+      transform: translate(0, -50%);
 
       svg {
         position: absolute;
         top: 50%;
         left: 50%;
+        display: block;
         width: 15px;
         height: 15px;
         border-radius: 1px;
         fill: palette(white);
-        display: block;
         transform: translate(-50%,-50%) scale(0);
         transition: all $animation-time $ease-in-out-sine;
       }
@@ -50,17 +49,41 @@
 
   input[type=checkbox] {
     display: none;
+
+    &:checked + label {
+      > .checkbox-label-fake {
+        border-color: palette(blue, secondary);
+        background-color: palette(blue, secondary);
+
+        > svg {
+          transform: translate(-50%, -50%) scale(1);
+        }
+      }
+    }
   }
 
-  input[type=checkbox]:checked + label {
-    color: $color-white;
+  // themes
+  &.-dark {
+    // > label {
+    //   &:hover {
+    //     color: palette(blue, lighter);
+    //   }
+    // }
 
-    span {
-      border-color: palette(blue, secondary);
-      background-color: palette(blue, secondary);
-      svg {
-        transform: translate(-50%,-50%) scale(1);
+    .checkbox-label {
+      color: palette(gray, 'dark');
+    }
+  }
+
+  &.-light {
+    > label {
+      &:hover {
+        color: palette(blue, lighter);
       }
+    }
+
+    .checkbox-label {
+      color: palette(white);
     }
   }
 }
