--- a/src/components/map/map-controls/styles.scss
+++ b/src/components/map/map-controls/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/settings';
+@import 'styles/functions';
 
 $button-size: 36px;
 
@@ -10,6 +11,11 @@ $button-size: 36px;
     &:not(:first-child) {
       margin: $space-1 0 0;
     }
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
   }
 
   li {
