--- a/src/components/ui/header/tools/styles.scss
+++ b/src/components/ui/header/tools/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/settings';
+@import 'styles/functions';
 
 .c-tools-menu {
   opacity: 0;
@@ -24,6 +25,8 @@
     flex: 1;
     padding: ($space-1 * 2);
     color: $color-primary;
+    text-decoration: none;
+    font-size: $font-size-default;
 
     &:not(:last-child) {
       border-right: 1px solid rgba(palette(white), .5);
