--- a/src/components/ui/timeline/styles.scss
+++ b/src/components/ui/timeline/styles.scss
@@ -1,12 +1,18 @@
 @import 'styles/settings';
+@import 'styles/functions';
 
 .c-timeline {
+  -webkit-font-smoothing: antialiased;
+  font-family: $font-family-1;
+  font-size: $font-size-default;
+
   .timeline-list {
     display: flex;
     justify-content: space-between;
     position: relative;
     width: 100%;
     height: 2px;
+    padding: 0;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHElEQVQYV2NkQAOMIP6Sw/99QHSMLeMW7ALIugAMHQgFiK4hAgAAAABJRU5ErkJggg==) repeat-x center;
   }
 
