--- a/styles/_info.scss
+++ b/styles/_info.scss
@@ -17,7 +17,7 @@
 
   .info-title {
     display: block;
-    font-family: $font-family-roboto;
+    font-family: $font-family-1;
     font-size: $font-size-default;
     font-weight: 500;
     text-transform: uppercase;
@@ -26,7 +26,7 @@
 
   .info-subtitle {
     display: block;
-    font-family: $font-family-roboto;
+    font-family: $font-family-1;
     font-size: $font-size-default;
   }
 
@@ -37,7 +37,7 @@
   }
 
   .info-description {
-    font-family: $font-family-roboto;
+    font-family: $font-family-1;
     overflow: hidden;
     font-size: $font-size-default + 1;
     color: $color-text-1;
