--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,13 +1,11 @@
-// @import 'styles/reset';
-@import 'styles/functions';
 
 // Max widths
 $max-width-main: 1280px;
 $max-width-sidebar: 700px;
 $max-width-modal: 700px;
 $max-width-modal-medium: 1130px;
-// Colors
 
+// Colors
 $palettes: (
   blue: (
     primary : #2E57B8,
@@ -57,7 +55,7 @@ $color-error: #de2239;
 $color-text-1: #4a596a;
 
 // Font families
-$font-family-roboto: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-1: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 // Fonts sizes
 $font-size-extra-small:   10px;
