Fixes styles map controls

--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -99,6 +99,9 @@ $ease-in-out-sine: cubic-bezier(0.445, 0.050, 0.550, 0.950);
 $zoom-margin-top: 10px;
 $zoom-margin-right: 10px;
 
+// map controls
+$map-controls-button-size: 36px;
+
 // Responsive breakpoints
 $breakpoint-mobile: 640px;
 
