--- a/src/components/map/map-controls/styles.scss
+++ b/src/components/map/map-controls/styles.scss
@@ -1,8 +1,6 @@
 @import 'styles/settings';
 @import 'styles/functions';
 
-$button-size: 36px;
-
 .c-map-controls {
   position: absolute;
   z-index: 999;
@@ -13,56 +11,60 @@ $button-size: 36px;
     }
   }
 
-  ul {
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    border: 1px solid palette(gray, 'light');
-    border-radius: 3px;
-    background-color: palette(white);
-
-    &:not(:first-child) {
-      margin: $space-1 / 2 0 0 0;
+  .custom-map-controls {
+    ul {
+      padding: 0;
+      margin: 0;
     }
 
-    button {
-      position: relative;
+    li {
       display: flex;
       justify-content: center;
       align-items: center;
-      width: $button-size;
-      height: $button-size;
+      list-style: none;
+      width: $map-controls-button-size;
+      height: $map-controls-button-size;
       padding: 0;
       margin: 0;
-      border: 0;
+      border: 1px solid palette(gray, 'light');
       border-radius: 3px;
       background-color: palette(white);
-      transition: background-color linear $animation-time;
-      cursor: pointer;
 
       &:not(:first-child) {
-        border-top: 1px solid palette(gray, 'light');
+        margin: $space-1 / 2 0 0 0;
       }
 
-      &:hover {
-        background-color: darken(palette(white), 5%);
-      }
+      button {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        border: 0;
+        border-radius: 3px;
+        background-color: palette(white);
+        transition: background-color linear $animation-time;
+        cursor: pointer;
 
-      &.-disabled {
-        pointer-events: none;
-        opacity: .25;
-      }
+        &:not(:first-child) {
+          border-top: 1px solid palette(gray, 'light');
+        }
 
-      > svg {
-        fill: palette(gray, 'dark');
+        &:hover {
+          background-color: darken(palette(white), 5%);
+        }
+
+        &.-disabled {
+          pointer-events: none;
+          opacity: .25;
+        }
+
+        > svg {
+          fill: palette(gray, 'dark');
+        }
       }
     }
   }
