--- a/src/components/ui/button/styles.scss
+++ b/src/components/ui/button/styles.scss
@@ -8,7 +8,8 @@
   align-items: center;
   justify-content: center;
   min-height: 32px;
-  padding: $space-1/2 $space-1;
+  padding: 0;
+  border: 0;
   border: 1px solid transparent;
   border-radius: 4px;
   background: none;
@@ -24,7 +25,7 @@
   outline: none;
   transition: all $animation-time $ease-in-out-sine;
 
-  > * {
+  > * + * {
     margin: 0 $space-1 0 0;
   }
 
@@ -84,7 +85,7 @@
 
   // sizes
   &.-regular {
-    padding: $space-1 $space-1 * 2;
+    padding: $space-1/2 $space-1;
   }
 
   &.-large {
@@ -98,5 +99,9 @@
 
   &.-bold {
     font-weight: 700;
+  }
+
+  &.-border {
+    border: 1px solid transparent;
   }
 }
