--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -50,6 +50,14 @@ $font-size-extrabig:      18px;
 $font-size-huge:          22px;
 $font-size-extrahuge:     32px;
 
+// typography – weights
+$font-weigth-light: 300;
+$font-weigth-regular: 400;
+$font-weigth-semi-bold: 500;
+$font-weigth-bold: 700;
+
+
+
 // spacing
 $space-1: 8px;
 
