--- a/src/components/form/custom-select/styles.scss
+++ b/src/components/form/custom-select/styles.scss
@@ -26,6 +26,9 @@
       &.react-select__value-container--has-value {
 
         > .react-select__single-value {
+          position: relative;
+          top: 0;
+          transform: translate(0, $space-1);
           margin: 0;
           color: currentColor;
           font-weight: 500;
