--- a/src/components/form/field/styles.scss
+++ b/src/components/form/field/styles.scss
@@ -2,12 +2,12 @@
 @import 'styles/functions';
 
 .c-field {
-  flex: 1;
+  // flex: 1;
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-1;
 
   > label {
-    font-size: $font-size-extrabig;
+    font-size: $font-size-default;
     color: currentColor;
   }
 
@@ -32,6 +32,16 @@
 
     > .field-container {
       margin: 0;
+    }
+  }
+
+  &.-bolder {
+    font-weight: $font-weigth-semi-bold;
+  }
+
+  &.-bigger {
+    > label {
+      font-size: $font-size-extrabig;
     }
   }
 }
