--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -56,7 +56,8 @@ $font-weigth-regular: 400;
 $font-weigth-semi-bold: 500;
 $font-weigth-bold: 700;
 
-
+// dimensions
+$size-header: 60px;
 
 // spacing
 $space-1: 8px;
